tests/strict_requires/strict_requires.exp
Error: D.js:3
  3: var x: number = C.foo;
                     ^^^^^ string. This type is incompatible with
  3: var x: number = C.foo;
            ^^^^^^ number

Error: D.js:4
  4: var y: string = C.A;
                     ^^^ number. This type is incompatible with
  4: var y: string = C.A;
            ^^^^^^ string

Error: D.js:5
  5: C.A = false;
           ^^^^^ boolean. This type is incompatible with
  5: C.A = false;
     ^^^ number


Found 3 errors
